--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -16,7 +16,7 @@ permissions:
 
 jobs:
   check-formatting:
-    name: Check formatting
+    name: Check formatting & style
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -33,11 +33,15 @@ jobs:
         restore-keys: ${{ runner.os }}-mix-
     - name: Install dependencies
       run: mix deps.get
-    - name: Run check
+    - name: Compile app
+      run: mix compile
+    - name: Run format check
       run: mix format --check-formatted
+    - name: Run style check
+      run: mix credo --strict
 
-  build:
-    name: Build and test
+  test:
+    name: Test
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
@@ -60,5 +64,7 @@ jobs:
         restore-keys: ${{ runner.os }}-mix-
     - name: Install dependencies
       run: mix deps.get
+    - name: Compile app
+      run: MIX_ENV=test mix compile
     - name: Run tests
       run: mix test
